Got a working logout and made website visually apealing

--- a/website/css/bootstrap.css
+++ b/website/css/bootstrap.css
@@ -4959,8 +4959,8 @@ a.badge:focus {
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
-  color: inherit;
-  background-color: #eee;
+  color: #FFAF48;
+  background-color: #FFAF48;
 }
 .jumbotron h1,
 .jumbotron .h1 {
