--- a/website/css/style.css
+++ b/website/css/style.css
@@ -18,7 +18,7 @@ padding-top: 15px;
 -webkit-box-shadow: 0px 0px 8px 0px #000000;
 -moz-box-shadow: 0px 0px 8px 0px #000000;
 box-shadow: 0px 0px 8px 0px #000000;
-background-color: rgba(1, 1, 1, 0.8);
+background-color: white;
 color: rgba(1, 1, 1, 0.8);
 }
 
