--- a/website/css/style.css
+++ b/website/css/style.css
@@ -12,13 +12,13 @@ position: fixed;
 top: 0;
 width: 100%;
 color: red;
-height: 35px;
+height: 50px;
 text-align: center;
 padding-top: 15px;
 -webkit-box-shadow: 0px 0px 8px 0px #000000;
 -moz-box-shadow: 0px 0px 8px 0px #000000;
 box-shadow: 0px 0px 8px 0px #000000;
-background-color: white;
+background-color: rgba(1, 1, 1, 0.8);
 color: rgba(1, 1, 1, 0.8);
 }
 
@@ -31,7 +31,7 @@ text-decoration: none;
 }
 
 #navigation a:hover {
-color: white;
+color: blue;
 } 
 
 p{
@@ -55,40 +55,35 @@ p2{
 	font-weight: 900;
 	text-transform: uppercase;
 }
+div.transbox img {
+	{  margin: 5%;000000
+  font-weight: bold;
+  opacity:0.9;
+  filter:alpha(opacity=90);
+  color: red;}
+}
 div.transbox
 {  margin: 30px;
-  background-color: #362D34;
+  background-color: black;
   border: 1px solid black;
+  font-color: red;
   opacity:0.9;
   filter:alpha(opacity=90);}
-div.transbox p
+div.transbox h1
 {  margin: 5%;000000
   font-weight: bold;
-  color: #000000;}
-
-#navigation1 {
-position: bottom;
-top: 0;
-width: 100%;
-color: red;
-height: 35px;
-text-align: center;
-padding-top: 15px;
--webkit-box-shadow: 0px 0px 8px 0px #000000;
--moz-box-shadow: 0px 0px 8px 0px #000000;
-box-shadow: 0px 0px 8px 0px #000000;
-background-color: rgba(1, 1, 1, 0.8);
-color: rgba(1, 1, 1, 0.8);
-}
-
-#navigation1 a {
-font-size: 25px;
-padding-left: 15px;
-padding-right: 15px;
-color: red;
-text-decoration: none;
-}
-
-#navigation1 a:hover {
-color: white;
-} 
+  opacity:0.9;
+  filter:alpha(opacity=90);
+  color: red;}
+  div.transbox h2
+{  margin: 5%;000000
+  font-weight: bold;
+  opacity:0.9;
+  filter:alpha(opacity=90);
+  color: red;}
+  div.transbox h4
+{  margin: 5%;000000
+  font-weight: bold;
+  opacity:0.9;
+  filter:alpha(opacity=90);
+  color: red;}
